<resources>
    <string name="aa_new">Added About pages: Páramo, Cajas, DMQ, This app\n\nAdded credits\n\nAdded this dialog, it will appear once every time the app is updated</string>
    <string name="aa_new_title">What\'s new</string>
    <string name="about_app"><![CDATA["<p>Flóramo is a field guide to identify 100 species of wild plants found in the páramo, a vegetation type at the top of the Andes Mountains of tropical South America. It contains field images, species descriptions, and an identification key using life forms, flower colors or scientific names. A map with location of species, routes for personalized records. Additional features include searches into the Missouri Botanical Garden Tropicos® database. Flóramo currently includes plants found the in the Cajas massif of southern Ecuador, but various species are found beyond this area.</p><p>The Flora of Cajas project is a collaboration between the <a href='link::http://www.missouribotanicalgarden.org/'>Missouri Botanical Garden</a> and the <a href='link::http://www.uazuay.edu.ec/HerbarioAzuay/'>Azuay Herbarium</a> (Universidad del Azuay, Cuenca Ecuador) with Parque Nacional Cajas.</p><p>We thank the Prometeo program of Ecuador´s Secretaría de Educación Superior, Ciencia, Tecnología e Innovación for a research fellowship to Carmen Ulloa at Universidad del Azuay; to Etapa-Parque Nacional Cajas, Ministerio del Ambiente de Ecuador, and funding agencies for field work; to the National Geographic Society.</p><br/><p>Project contact: <a href='mailto::carmen.ulloa@mobot.org'>C. Ulloa</a></p><br/><p>All rights reserved.</p><p>©Missouri Botanical Garden, Science and Conservation Division</p>"]]></string>
    <string name="about_cajas"><![CDATA["<p>The Cajas massif is located 30 km west of the city of Cuenca, Azuay province in southern Ecuador. It is dominated by herbaceous páramo with scattered patches of forest.</p><p>Pleistocene glaciers carved the landscape resulting in a unique area of irregular topography with more than 235 lakes and lagoons and unparalleled scenic beauty. The climate is cold and humid; there is however, considerable daily weather variation that can change rapidly from calm to strong winds, from cloudy to intense sun, from dry to fog or drizzle, and from hard rain to hail. The minimum daily temperature is –2°C and the maximum is 18°C. The annual mean precipitation is 1200 mm. It has two access roads: the main Cuenca-Molleturo-Naranjal road, and the unpaved Cuenca-Soldados. The Área de Recreación Cajas was created in 1977 and upgraded to Cajas National Park in 1996.  It comprises 28,544 hectares, between 3150 and 4450 m asl.</p><br/><p>Read more: <a href='link::http://www.mobot.org/MOBOT/research/paramo/study.shtml'>Study area: Cajas National Park</a></p>"]]></string>
    <string name="about_contact">Contact us</string>
    <string name="about_paramo"><![CDATA["<p>Páramo is a unique mountain ecosystem dominated by bunch–grasses. It is found above the tree line and up to the permanent snow line (3000–5000 m/9000–15000 ft elev.) from Venezuela to northern Peru and on mountains in Panama and Costa Rica. The word páramo is associated to treeless inhospitable plains. However, páramos have high biological diversity and endemism, and constitute a unique biota.</p><p>Plants have adapted to the cold conditions, extreme solar irradiation, low atmospheric pressure, dramatic daily fluctuations in temperature, and seasonal rains. Many plants grow very close to the ground, forming <a href='info::rosette'>rosettes</a> and <a href='info::cushion'>cushion-plants</a>, or have reduced <a href='info::leaves'>hard leaves</a> or are covered with a dense layer of <a href='info::hairs'>white or silvery hairs</a>.</p><p>Páramos along with the Andean forests, function as a buffer in the hydrological cycle, which slowly releases the fallen rain water to rivers and lakes. The water captured in the páramos benefits millions of people that use it for consumption and irrigation.</p><p>The effect of the increase in temperatures due to climate change is already observed in peaks on the higher tropical mountains with a marked glacier retreat. Changes in the páramos hydrological cycle can bring catastrophic consequences and immense economic implications for the Andean countries that depend on this ecosystem for provision of water for human consumption, for operation of hydro-electrical plants, irrigation systems.</p><br/><p>Read more: <a href='link::http://www.mobot.org/MOBOT/Research/paramo_flora.shtml'>Páramo flora project</a></p>"]]></string>
    <string name="credits_acknowledgments">We thank the support of the Prometeo program of Ecuador’s Secretaría de Educación Superior, Ciencia, Tecnología e Innovación for a fellowship to C. Ulloa Ulloa, Ph.D. at Ecuador’ National Herbarium of the National Institute of Biodiversity and at the Herbarium of Universidad del Azuay. To the Ministerio del Ambiente del Ecuador and Province offices, the project Mapa de Vegetación del Ecuador, Etapa-Parque Nacional Cajas, F. Sornoza (Yanacocha), Agua Potable del DMQ, the National Geographic. To S. Christoph y C. Davidson of FloraoftheWorld.org. M. Unda help updating data.</string>
    <string name="credits_acknowledgments_title">Acknowledgments</string>
    <string name="credits_authors_cajas">C. Ulloa Ulloa, D. Minga, R. Ansaloni, A. Verdugo, S. Álvarez, P. M. Jørgensen.\n\nThe Cajas Flora project is a collaboration between the Missouri Botanical Garden and the Azuay Herbarium (Universidad del Azuay) with Parque Nacional Cajas.</string>
    <string name="credits_authors_cajas_title">Authors Cajas text</string>
    <string name="credits_authors_dmq">B. Cuamacás, D. Fernández, E. Freire, M. Haro, V. Herrera, B. Obando, W. Palacios, M. Peñafiel, E. Rea, C. Ulloa Ulloa, M. Unda, A. Yánez.\n\nThe DMQ project is a collaboration between the Missouri Botanical Garden and the \'Herbario Nacional del Ecuador del Instituto Nacional de Biodiversidad\'.</string>
    <string name="credits_authors_dmq_title">Authors DMQ text</string>
    <string name="credits_components"><![CDATA["<p><a href='link::https://github.com/woozzu/IndexableListView'>IndexableListView</a>, by Woozzu, licenced under <a href='link::http://www.apache.org/licenses/LICENSE-2.0'>Apache License Version 2.0</a></p><br/><p><a href='link::https://github.com/bieliaievays/ViewPagerIndicatorCircles'>ViewPagerIndicatorCircles</a>, by Iuliia Ashomok, licenced under <a href='link::http://www.apache.org/licenses/LICENSE-2.0'>Apache License Version 2.0</a></p><br/><p><a href='link::https://nishantvnair.wordpress.com/2010/09/28/flowlayout-in-android/'>FlowLayout</a>, by Nishant Nair </p><br/><p><a href='link::http://www.androidhive.info/2013/09/android-fullscreen-image-slider-with-swipe-and-pinch-zoom-gestures/'>Android Fullscreen Image Slider with Swipe and Pinch Zoom Gestures</a>, by Ravi Tamada </p><br/><p><a href='link::https://github.com/MikeOrtiz/TouchImageView'>TouchImageView</a>, by Mike Ortiz </p>"]]></string>
    <string name="credits_components_title">Components</string>
    <string name="credits_contact"><![CDATA["<a href='mailto::carmen.ulloa@mobot.org'>C. Ulloa</a>"]]></string>
    <string name="credits_contact_title">Project contact</string>
    <string name="credits_design">L.M. Unda, V. Zapata, Quito, Ecuador.</string>
    <string name="credits_design_title">Design and development</string>
    <string name="credits_footer">All rights reserved.\n©Missouri Botanical Garden, Science and Conservation Division</string>
    <string name="credits_icons"><![CDATA["<p><a href='link::http://www.freevectorvip.com/silhouette-of-tree-of-flowers-and-plants.html'>'Silhouette of tree of flowers and plants'</a>, licenced under Non commercial use, learning and reference use only. </p><br/><p><a href='link::http://www.freevectorvip.com/marine-biology-silhouette.html'>'Marine biology silhouette'</a>, licenced under Non commercial use, learning and reference use only. </p><br/><p><a href='link::https://design.google.com/icons/'>Material icons</a>, licenced under <a href='link::http://www.apache.org/licenses/LICENSE-2.0'>Apache License Version 2.0</a></p>"]]></string>
    <string name="credits_icons_title">Icons</string>
    <string name="credits_photos">C. Aedo, D. Fernández, FloraoftheWorld.org, E. Freire, P. M. Jørgensen, P. Mena Vásconez, D. Minga, B. Obando, W. Palacios, C. Ulloa Ulloa, A. Verdugo.</string>
    <string name="credits_photos_title">Photographic credits</string>
    <string name="menu_encyclopedia">Encyclopedia</string>
    <string name="menu_help">Bug reports, feedback</string>
    <string name="menu_search">Search</string>
    <string name="menu_tropicos">Tropicos® Search</string>
    <string name="search">Search</string>
    <string name="search_color_info">Species with color %1$s</string>
    <string name="search_conditional_info_and">Search species matching ALL of the next criteria:</string>
    <string name="search_life_form_info">Species with life form %1$s</string>
    <string name="search_radio_and">AND search</string>
    <string name="search_radio_or">OR search</string>
    <string name="search_text_info">Species with family, genus or name containing %1$s</string>
    <string name="search_txt_hint">Family, genus or species</string>
    <string name="tropicos_common_name">Common name</string>
    <string name="tropicos_family">Family</string>
    <string name="tropicos_info">Enter at least one of the following criteria to perform a search on the Tropicos® database. This search will show up to %1$s results.</string>
    <string name="tropicos_info_warning">This search will connect to the internet</string>
    <string name="tropicos_name">Name</string>
</resources>