<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_actions"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_encyclopedia"
            android:icon="@drawable/ic_encyclopedia_24dp"
            android:title="@string/menu_encyclopedia" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_24dp"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_tropicos"
            android:icon="@drawable/ic_tropicos"
            android:title="@string/menu_tropicos" />
    </group>

    <group
        android:id="@+id/menu_misc"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_bug_report_24dp"
            android:title="@string/menu_help" />
    </group>
</menu>
