<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mstb="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context="com.lzm.Cajas.search.SearchFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/search_button"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.lzm.Cajas.customComponents.FlowLayout
                android:id="@+id/search_colors_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" />

            <com.lzm.Cajas.customComponents.FlowLayout
                android:id="@+id/search_life_forms_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" />

            <EditText
                android:id="@+id/search_by_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/search_txt_hint" />

            <RadioGroup
                android:id="@+id/busqueda_radiogroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/search_radio_and"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/search_radio_and" />

                <RadioButton
                    android:id="@+id/search_radio_or"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_radio_or" />
            </RadioGroup>

            <TextView
                android:id="@+id/search_conditional_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_conditional_info_and" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/search_color_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_color_info"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/search_life_form_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_life_form_info"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/search_text_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_text_info"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/search_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/search"
        android:src="@drawable/ic_search_24dp" />
</RelativeLayout>
