<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                style="@style/search_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_warning_24dp"
                android:drawableStart="@drawable/ic_warning_24dp"
                android:gravity="left"
                android:text="@string/tropicos_info_warning"
                android:textStyle="bold|italic" />

            <TextView
                style="@style/search_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tropicos_info" />

            <TextView
                style="@style/detail_info_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:labelFor="@+id/tropicos_name"
                android:text="@string/tropicos_name" />

            <EditText
                android:id="@+id/tropicos_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true" />

            <TextView
                style="@style/detail_info_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:labelFor="@+id/tropicos_common_name"
                android:text="@string/tropicos_common_name" />

            <EditText
                android:id="@+id/tropicos_common_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true" />

            <TextView
                style="@style/detail_info_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:labelFor="@+id/tropicos_family"
                android:text="@string/tropicos_family" />

            <EditText
                android:id="@+id/tropicos_family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true" />
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/tropicos_fab_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_tropicos" />

</android.support.design.widget.CoordinatorLayout>
